Work on fireframe. adding storage.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,3 +77,13 @@ $ionicons-font-path: "../assets/fonts";
   color: darkred;
   background-color: lightgrey;
 }
+[progress] {
+  padding: .4em .8em;
+  color: blue;
+  background-color: lightgrey;
+}
+[result] {
+  padding: .4em .8em;
+  color: #077;
+  background-color: lightgrey;
+}
